updates to tags

--- a/index.html
+++ b/index.html
@@ -211,9 +211,6 @@
           <h4 class="heading-3 tag-text">More Social</h4>
         </div>
         <div class="tag">
-          <h4 class="heading-3 tag-text">More Active</h4>
-        </div>
-        <div class="tag">
           <h4 class="heading-3 tag-text">More Expansive</h4>
         </div>
       </div>
@@ -247,7 +244,7 @@
       <div class="tag-wrapper">
         <h4 class="heading-3 tag-title">WATERSPORTS</h4>
         <div class="tag">
-          <h4 class="heading-3 tag-text">Scuba</h4>
+          <h4 class="heading-3 tag-text">Scuba on property</h4>
         </div>
         <div class="tag">
           <h4 class="heading-3 tag-text">Motorized Watersports</h4>
@@ -259,10 +256,7 @@
       <div class="tag-wrapper">
         <h4 class="heading-3 tag-title">ACTIVITIES</h4>
         <div class="tag">
-          <h4 class="heading-3 tag-text">Golf on Resort</h4>
-        </div>
-        <div class="tag">
-          <h4 class="heading-3 tag-text">Nearby Golf Course</h4>
+          <h4 class="heading-3 tag-text">Golf</h4>
         </div>
         <div class="tag">
           <h4 class="heading-3 tag-text">Tennis</h4>
@@ -332,7 +326,7 @@
     "IdealFor": "Pool Lovers",
     "IdealFor2": "Beach Lovers",
     "IdealFor3": "Food and Drink Lovers",
-    "Tags": "adults-only, more-social, more-intimate, long-stretch, scuba, motorized-watersports, tennis, swim-up-suites, jerk-shack, british-pub,  steakhouse, sushi, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, more-social, more-intimate, long-stretch, scuba-on-property, motorized-watersports, tennis, swim-up-suites, jerk-shack, british-pub,  steakhouse, sushi, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Montego Bay/1 - Carousel_ResortHero_Slider/Sandals-SMB-BeachAerial-6.jpg",
     "Beaches": "images/Sandals Montego Bay/1 - Carousel_ResortHero_Slider/Sandals-SMB-BeachAerial-6.jpg",
     "Pool": "images/Sandals Montego Bay/3 - Pools/Sandals-SMB-Swim-Up.jpg",
@@ -348,7 +342,7 @@
     "IdealFor": "Food and Drink Lovers",
     "IdealFor2": "Adventure",
     "IdealFor3": "Water Sports Lovers",
-    "Tags": "adults-only, more-tranquil, more-intimate, offshore-island, scuba, over-the-water-villas, jerk-shack, british-pub, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, more-tranquil, more-intimate, offshore-island, scuba-on-property, over-the-water-villas, jerk-shack, british-pub, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Royal Caribbean/1 - Carousel_ResortHero_Slider/Sandals-Royal-Caribbean-Offshore-Island.jpg",
     "Beaches": "images/Sandals Royal Caribbean/4 - Beaches/Sandals-SRC-BeachAerial-7.jpg",
     "Pool": "images/Sandals Royal Caribbean/3 - Pools/Sandals-Royal-Caribbean-Swim-ups.jpg",
@@ -364,7 +358,7 @@
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Adventure Lovers",
     "IdealFor3": "Watersports Lovers",
-    "Tags": "adults-only, more-tranquil, more-intimate, long-stretch, scuba, glass-bottom-boat, tennis, sky-pool-suite, swim-up-suite, motorized-watersports, teppanyaki, distance-to-airport-more-than-an-hour  \n",
+    "Tags": "adults-only, more-tranquil, more-intimate, long-stretch, scuba-on-property, glass-bottom-boat, tennis, sky-pool-suite, swim-up-suite, motorized-watersports, teppanyaki, distance-to-airport-more-than-an-hour  \n",
     "Images": "images/Sandals Negril/1 - Carousel_ResortHero_Slider/Sandals-Negril-Aerial.jpg",
     "Beaches": "images/Sandals Negril/4 - Beaches/Sandals-Negril-Aerial.jpg",
     "Pool": "images/Sandals Negril/3 - Pools/Sandals-Negril-Pool.jpg",
@@ -376,11 +370,11 @@
   {
     "ResortTitle": "Sandals Ochi",
     "Island": "Jamaica",
-    "ResortDescription": "Easy access to the Bob Marley Reggae and Culture Tour\nFeatures the Ochi Beach Club \n7 main pools, 98 villa pools, and 22 whirlpools\n16 Restaurants and 11 bars\nCaribbean’s first speakeasy bar, the Rabbit Hole\nEasy access to Jamaica’s most elite and popular golf course \nThe Caribbean’s largest Rock-Climbing Wall (30’ X 30’)\nPADI-Certified SCUBA diving and equipment\nTennis and pickleball courts \nFitness Center and Red Lane Spa",
+    "ResortDescription": "Easy access to the Bob Marley Reggae and Culture Tour\nFeatures the Ochi Beach Club \n7 main pools, 98 villa pools, and 22 whirlpools\n16 Restaurants and 11 bars\nCaribbean’s first speakeasy bar, the Rabbit Hole\nEasy access to Jamaica’s most elite and popular golf course \nThe Caribbean’s largest Rock-Climbing Wall (30’ X 30’)\nPADI-Certified SCUBA diving and equipment\nTennis and pickle-ball courts \nFitness Center and Red Lane Spa",
     "IdealFor": "Golf Lovers",
     "IdealFor2": "Food and Drink Lovers",
     "IdealFor3": "Pool Lovers",
-    "Tags": "adults-only, more-social, more-expansive, scuba, nearby-golf-course, glass-bottom-boat, tennis, pickleball, jerk-shack, sushi, teppanyaki, distance-to-airport-more-than-an-hour  \n",
+    "Tags": "adults-only, more-social, more-expansive, scuba-on-property, golf, glass-bottom-boat, tennis, pickle-ball, jerk-shack, sushi, teppanyaki, distance-to-airport-more-than-an-hour  \n",
     "Images": "images/Sandals Ochi/1 - Carousel_ResortHero_Slider/Sandals-Ochi-Main-Pool.jpg",
     "Beaches": "images/Sandals Ochi/4 - Beaches/Sandals-Ochi-Beach.jpg",
     "Pool": "images/Sandals Ochi/3 - Pools/Sandals-Ochi-Great-House-Village.jpg",
@@ -396,7 +390,7 @@
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Food and Drink Lovers",
     "IdealFor3": "Golf Lovers",
-    "Tags": "adults-only, more-tranquil, more-intimate, scuba, cove-beach, glass-bottom-boat, tennis, british-pub, distance-to-airport-more-than-an-hour  \n",
+    "Tags": "adults-only, more-tranquil, more-intimate, scuba-on-property, cove-beach, glass-bottom-boat, tennis, british-pub, distance-to-airport-more-than-an-hour  \n",
     "Images": "images/Sandals Royal Plantation/1 - Carousel_ResortHero_Slider/croissantsandcaviar_sandalsroyalplantation-15.jpg",
     "Beaches": "",
     "Pool": "",
@@ -408,11 +402,11 @@
   {
     "ResortTitle": "Sandals South Coast",
     "Island": "Jamaica",
-    "ResortDescription": "Set on a 2-mile stretch of Jamaica's south coast's most pristine white-sand beach\nLocated within a 500-acre nature preserve\nEasy access to the Appleton Estate Historic Rum Tour (Pelican Bar or YS Falls might be a better option)\nThree beachfront pools, including Jamaica’s largest zero-entry pool\n9 restaurants and 7 bars\nBeachside food trucks \nOver-the-water bar, Latitudes\nPADI-Certified SCUBA diving and equipment\nTennis and pickleball courts\nFitness Center and Red Lane Spa",
+    "ResortDescription": "Set on a 2-mile stretch of Jamaica's south coast's most pristine white-sand beach\nLocated within a 500-acre nature preserve\nEasy access to the Appleton Estate Historic Rum Tour (Pelican Bar or YS Falls might be a better option)\nThree beachfront pools, including Jamaica’s largest zero-entry pool\n9 restaurants and 7 bars\nBeachside food trucks \nOver-the-water bar, Latitudes\nPADI-Certified SCUBA diving and equipment\nTennis and pickle-ball courts\nFitness Center and Red Lane Spa",
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Nature Lovers",
     "IdealFor3": "Food and Wine Lovers",
-    "Tags": "adults-only, more-social, more-expansive, scuba, long-stretch, tennis, pickleball, motorized-watersports, over-the-water-villa, rondoval-suite, swim-up-suite, jerk-shack, sushi, distance-to-airport-more-than-an-hour  \n",
+    "Tags": "adults-only, more-social, more-expansive, scuba-on-property, long-stretch, tennis, pickle-ball, motorized-watersports, over-the-water-villa, rondoval-suite, swim-up-suite, jerk-shack, sushi, distance-to-airport-more-than-an-hour  \n",
     "Images": "images/Sandals Royal Plantation/1 - Carousel_ResortHero_Slider/croissantsandcaviar_sandalsroyalplantation-15.jpg",
     "Beaches": "images/Sandals Royal Plantation/4 - Beaches/SRP_Beach_Detail.jpg",
     "Pool": "images/Sandals Royal Plantation/3 - Pools/croissantsandcaviar_sandalsroyalplantation-4.jpg",
@@ -429,7 +423,7 @@
     "IdealFor": "Adventure Lovers",
     "IdealFor2": "Golf Lovers",
     "IdealFor3": "Food and Drink Lovers",
-    "Tags": "adults-only, more-social, more-expansive, scuba, rondoval-suite, swim up-suite, off-property-golf, rum-club, jerk-shack, distance-to-airport-more-than-an-hour  \n",
+    "Tags": "adults-only, more-social, more-expansive, scuba-on-property, rondoval-suite, swim up-suite, golf, rum-club, jerk-shack, distance-to-airport-more-than-an-hour  \n",
     "Images": "images/Sandals Dunn's River/1 - Carousel_ResortHero_Slider/Sandals_Dunns_River_Beach.jpg",
     "Beaches": "images/Sandals Dunn's River/4 - Beaches/Sandals_Dunns_River_Beach.jpg",
     "Pool": "images/Sandals Dunn's River/3 - Pools/Sandals_Dunns_River_Pool_Whirlpool.jpg",
@@ -445,7 +439,7 @@
     "IdealFor": "Food and Drink Lovers",
     "IdealFor2": "Island Lovers",
     "IdealFor3": "Pool Lovers",
-    "Tags": "adults-only, more-social, more-intimate, scuba, long-stretch, tennis, pickleball, golf-off-property, british-pub, jerk-shack, sushi, teppanyaki, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, more-social, more-intimate, scuba-on-property, long-stretch, tennis, pickle-ball, golf, british-pub, jerk-shack, sushi, teppanyaki, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Royal Bahamian/1 - Carousel_ResortHero_Slider/SRB - Aerial Beach 1.jpg",
     "Beaches": "images/Sandals Royal Bahamian/4 - Beaches/SRB - Aerial Barefoot Cay 2.jpg",
     "Pool": "images/Sandals Royal Bahamian/3 - Pools/SRB - Aerial East Bay Pool 2.jpg",
@@ -461,7 +455,7 @@
     "IdealFor": "Dive Lover",
     "IdealFor2": "Adventure Lovers",
     "IdealFor3": "Nature Lovers",
-    "Tags": "adults-only, more-social, more-expansive, scuba, tennis, swim-up-suite, tennis, british-pub, sushi, teppanyaki, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, more-social, more-expansive, scuba-on-property, tennis, swim-up-suite, tennis, british-pub, sushi, teppanyaki, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Grenada/1 - Carousel_ResortHero_Slider/GRENEDA_SANDALS_DISKIN-161.jpg",
     "Beaches": "images/Sandals Grenada/4 - Beaches/Sandals-Grenada-02-2022-Beaches 2-5156.jpg",
     "Pool": "images/Sandals Grenada/3 - Pools/GRENEDA_SANDALS_DISKIN-161.1.jpg",
@@ -477,7 +471,7 @@
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Pool Lovers",
     "IdealFor3": "Food and Drink Lovers",
-    "Tags": "adults-only, more-social, more-expansive, scuba, swim-up-suite, tennis, glass-bottom-boat, bowling, teppanyaki, sushi, steakhouse, british-pub , distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, more-social, more-expansive, scuba-on-property, swim-up-suite, tennis, glass-bottom-boat, bowling, teppanyaki, sushi, steakhouse, british-pub , distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Barbados/1 - Carousel_ResortHero_Slider/IMG_9234.jpg",
     "Beaches": "images/Sandals Barbados/5 - Dining & Bars/SBR_TIKI_BEACH_BAR_0290.jpg",
     "Pool": "",
@@ -493,7 +487,7 @@
     "IdealFor": "Pool Lovers",
     "IdealFor2": "Food and Drink Lovers",
     "IdealFor3": "Dive Lovers",
-    "Tags": "adults-only, more-social, more-expansive, scuba, swim-up-suite, skypool-suite, rondovol-villa, tennis, bowling, steakhouse, jerk shack, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, more-social, more-expansive, scuba-on-property, swim-up-suite, skypool-suite, rondovol-villa, tennis, bowling, steakhouse, jerk shack, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Royal Barbados/1 - Carousel_ResortHero_Slider/SBR_SAINT_LAWRENCE_HOUSE_EXT_MAGIC_072.jpg",
     "Beaches": "images/Sandals Royal Barbados/4 - Beaches/SBR_MAIN_POOL_DRONE_0113.jpg",
     "Pool": "images/Sandals Royal Barbados/3 - Pools/SBR_MAIN_POOL_DRONE_0053.jpg",
@@ -509,7 +503,7 @@
     "IdealFor": "Pool Lovers",
     "IdealFor2": "Golf Lovers",
     "IdealFor3": "Water Sports Lovers",
-    "Tags": "adults-only, more-tranquil, more-intimate, scuba, golf-nearby, tennis, motorized-watersports, swim-up-suite, rondovol-villa, teppanyaki, sushi, distance-to-airport-more-than-an-hour \n",
+    "Tags": "adults-only, more-tranquil, more-intimate, scuba-on-property, golf, tennis, motorized-watersports, swim-up-suite, rondovol-villa, teppanyaki, sushi, distance-to-airport-more-than-an-hour \n",
     "Images": "images/Sandals Halcyon Beach/1 - Carousel_ResortHero_Slider/SHC Drone.jpg",
     "Beaches": "images/Sandals Halcyon Beach/4 - Beaches/SHC Drone.jpg",
     "Pool": "",
@@ -557,7 +551,7 @@
     "IdealFor": "Food and Drink Lovers",
     "IdealFor2": "Pool Lovers",
     "IdealFor3": "Sport Lovers",
-    "Tags": "Adults Only, More Tranquil, More Expansive (Number of Suites: 351 Rooms), Scuba, Swim Up Suite, Rondoval Villa , Steakhouse, Sushi , Distance to Airport: Less than 45 minutes \n",
+    "Tags": "Adults Only, More Tranquil, More Expansive (Number of Suites: 351 Rooms), scuba-on-property, Swim Up Suite, Rondoval Villa , Steakhouse, Sushi , Distance to Airport: Less than 45 minutes \n",
     "Images": "images/Sandals Royal Curacao/1 - Carousel_ResortHero_Slider/croissantsandcaviar_sandalsroyalcuracao_resort-8.jpg",
     "Beaches": "images/Sandals Royal Curacao/4 - Beaches/untitled-194(B).jpg",
     "Pool": "images/Sandals Royal Curacao/3 - Pools/untitled-185.jpg",
@@ -573,7 +567,7 @@
     "IdealFor": "Nature Lovers",
     "IdealFor2": "Pool Lovers",
     "IdealFor3": "Watersports Lovers",
-    "Tags": "Adults Only, More Tranquil, More Intimate, Long stretch of beach, Scuba,, Tennis, Rondoval Villa, Teppanyaki, British Pub, Sushi, Distance to Airport: Less than 45 minutes ",
+    "Tags": "Adults Only, More Tranquil, More Intimate, Long stretch of beach, scuba-on-property,, Tennis, Rondoval Villa, Teppanyaki, British Pub, Sushi, Distance to Airport: Less than 45 minutes ",
     "Images": "images/Sandals Grande Antigua/1 - Carousel_ResortHero_Slider/SANDALS_07_2019_BEACH_PADDLEBOARD_COUPLE_6830-370-123.jpg",
     "Beaches": "images/Sandals Grande Antigua/4 - Beaches",
     "Pool": "images/Sandals Grande Antigua/3 - Pools/7H6A7577.jpg",
@@ -589,7 +583,7 @@
     "IdealFor": "",
     "IdealFor2": "Dive Lovers",
     "IdealFor3": "Sport Lovers",
-    "Tags": "adults-only, more-tranquil, more-expansive, scuba, tennis, overwater villas, swim-up-suites, steakhouse, Sushi, Jerk Shack, distance-to-airport-less-than-45-minutes\n",
+    "Tags": "adults-only, more-tranquil, more-expansive, scuba-on-property, tennis, overwater villas, swim-up-suites, steakhouse, Sushi, Jerk Shack, distance-to-airport-less-than-45-minutes\n",
     "Images": "images/Sandals Saint Vincent/1 - Carousel_ResortHero_Slider/Sandals-Saint-Vincent-aerial-beach.jpg",
     "Beaches": "images/Sandals Saint Vincent/4 - Beaches/Sandals-Saint-Vincent-beach.jpg",
     "Pool": "images/Sandals Saint Vincent/3 - Pools/Sandals-Saint-Vincent-Heart-Shape-Pool.jpg",
@@ -605,7 +599,7 @@
     "IdealFor": "Family Fun. ",
     "IdealFor2": "Watersports",
     "IdealFor3": "Golf Lovers",
-    "Tags": "families-with-kids, more-social, more-expansive, scuba, tennis, golf-off-property, distance-to-airport-more-than-an-hour \n",
+    "Tags": "families-with-kids, more-social, more-expansive, scuba-on-property, tennis, golf, distance-to-airport-more-than-an-hour \n",
     "Images": "images/Beaches Ocho Rios/1 - Carousel_ResortHero_Slider/BBO_Beach.jpg",
     "Beaches": "images/Beaches Ocho Rios/4 - Beaches/BBO_Beach_2_Drone_.jpg",
     "Pool": "images/Beaches Ocho Rios/3 - Pools/BBO_Pool_Bar.jpg",
@@ -621,7 +615,7 @@
     "IdealFor": "Family Fun",
     "IdealFor2": "Watersports",
     "IdealFor3": "Beach Lover",
-    "Tags": "families-with-kids, more-social, more-expansive, long-stretch, scuba, tennis, distance-to-airport-more-than-an-hour \n",
+    "Tags": "families-with-kids, more-social, more-expansive, long-stretch, scuba-on-property, tennis, distance-to-airport-more-than-an-hour \n",
     "Images": "images/Beaches Negril/1 - Carousel_ResortHero_Slider/DJI_0935 copy.jpg",
     "Beaches": "images/Beaches Negril/4 - Beaches/Beaches Negril_Beach_4.jpg",
     "Pool": "images/Beaches Negril/3 - Pools/DJI_0820.jpg",
@@ -637,7 +631,7 @@
     "IdealFor": "Family Fun",
     "IdealFor2": "Watersports",
     "IdealFor3": "Dive Lovers",
-    "Tags": "families-with-kids, more-social, more-expansive, scuba, tennis, teppanyaki, sushi, british-pub, distance-to-airport: less-than-45-minutes\n",
+    "Tags": "families-with-kids, more-social, more-expansive, scuba-on-property, tennis, teppanyaki, sushi, british-pub, distance-to-airport: less-than-45-minutes\n",
     "Images": "images/Beaches Turks and Caicos/1 - Carousel_ResortHero_Slider/DJI_20240120093216_0798_D-Edit.1.jpg",
     "Beaches": "images/Beaches Turks and Caicos/4 - Beaches/DJI_20240120093216_0798_D-Edit.jpg",
     "Pool": "images/Beaches Turks and Caicos/3 - Pools/BTC_ITALIAN_POOL20-6-963-Edit.jpg",
