--- a/index.html
+++ b/index.html
@@ -87,24 +87,20 @@
       <div class="right-resort-details flex">
         <div class="controls"></div>
         <div class="tabs flex">
-          <div data-id="suggested" class="tab suggested-tab active-tab">Suggested</div>
-          <!-- <div data-id="map" class="tab">Map</div> -->
+          <div data-id="suggested" class="tab suggested-tab active-tab">Overview</div>
           <div data-id="beaches" class="tab">Beaches</div>
           <div data-id="pools" class="tab">Pools</div>
           <div data-id="dining" class="tab">Dining & Bars</div>
-          <div data-id="watersports" class="tab">Watersports</div>
-          <div data-id="island" class="tab">Island Tours</div>
+          <!-- <div data-id="watersports" class="tab">Watersports</div>
+          <div data-id="island" class="tab">Island Tours</div> -->
         </div>
         <div class="resort-images suggested active">
           <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Carousel_ResortHero_Slider/{{#dashes}}{{ResortTitle}}{{/dashes}}_Carousel_ResortHero_Slider_1.jpg"></div>
           <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_1.jpg"></div>
           <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_1.jpg"></div>
           <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_1.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_1.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_1.jpg"></div>
-        </div>
-        <div class="resort-images map">
-          
+          <!-- <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_1.jpg"></div>
+          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_1.jpg"></div> -->
         </div>
         <div class="resort-images beaches">
           <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_1.jpg"></div>
@@ -124,7 +120,7 @@
           <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_3.jpg"></div>
           <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_4.jpg"></div>
         </div>
-        <div class="resort-images watersports">
+        <!-- <div class="resort-images watersports">
           <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_1.jpg"></div>
           <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_2.jpg"></div>
           <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_3.jpg"></div>
@@ -135,7 +131,7 @@
           <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_2.jpg"></div>
           <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_3.jpg"></div>
           <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_4.jpg"></div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
@@ -159,8 +155,8 @@
         <div data-island="grenada" class="carousel-cell island-picker"><div class="island-name">Grenada</div><img src="images/splash/grenada.jpeg"></div>
         <div data-island="jamaica" class="carousel-cell island-picker"><div class="island-name">Jamaica</div><img src="images/splash/jamaica.webp"></div>
         <div data-island="saint-lucia" class="carousel-cell island-picker"><div  class="island-name">Saint Lucia</div><img src="images/splash/saintlucia.webp"></div>
-        <div data-island="vincent" class="carousel-cell island-picker"><div class="island-name">Saint Vincent</div><img src="images/splash/Vincent.jpg"></div>
-        <div data-island="turks" class="carousel-cell island-picker"><div class="island-name">Turks & Caicos</div><img src="images/splash/Turks.webp"></div>
+        <div data-island="saint-vincent" class="carousel-cell island-picker"><div class="island-name">Saint Vincent</div><img src="images/splash/Vincent.jpg"></div>
+        <div data-island="turks-and-caicos" class="carousel-cell island-picker"><div class="island-name">Turks and Caicos</div><img src="images/splash/Turks.webp"></div>
       </div>
 
     </div>
@@ -390,7 +386,7 @@
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Food and Drink Lovers",
     "IdealFor3": "Golf Lovers",
-    "Tags": "adults-only, more-tranquil, more-intimate, scuba-on-property, cove-beach, glass-bottom-boat, tennis, british-pub, distance-to-airport-more-than-an-hour  \n",
+    "Tags": "adults-only, more-tranquil, more-intimate, scuba-on-property, cove-beach, glass-bottom-boat, golf, tennis, british-pub, distance-to-airport-more-than-an-hour  \n",
     "Images": "images/Sandals Royal Plantation/1 - Carousel_ResortHero_Slider/croissantsandcaviar_sandalsroyalplantation-15.jpg",
     "Beaches": "",
     "Pool": "",
@@ -439,7 +435,7 @@
     "IdealFor": "Food and Drink Lovers",
     "IdealFor2": "Island Lovers",
     "IdealFor3": "Pool Lovers",
-    "Tags": "adults-only, more-social, more-intimate, scuba-on-property, long-stretch, tennis, pickle-ball, golf, british-pub, jerk-shack, sushi, teppanyaki, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, more-social, more-intimate, scuba-on-property, long-stretch, tennis, pickle-ball, british-pub, jerk-shack, sushi, teppanyaki, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Royal Bahamian/1 - Carousel_ResortHero_Slider/SRB - Aerial Beach 1.jpg",
     "Beaches": "images/Sandals Royal Bahamian/4 - Beaches/SRB - Aerial Barefoot Cay 2.jpg",
     "Pool": "images/Sandals Royal Bahamian/3 - Pools/SRB - Aerial East Bay Pool 2.jpg",
@@ -529,13 +525,13 @@
     "IslandTours": ""
   },
   {
-    "ResortTitle": "Sandals Grande St. Lucian",
+    "ResortTitle": "Sandals Grande St Lucian",
     "Island": "Saint Lucia",
     "ResortDescription": "Located on Rodney Bay peninsula, known for the calmest waters in Saint Lucia\nMile-long beach with views of volcanic mountains\nLagoon swim-up rooms with direct pool access from the patio \n Stay at 1, play at 3 – full and easy access to 2 other Sandals resorts\n PADI® Certified SCUBA diving and equipment \nGreg Norman designed golf course \n12 restaurants and 6 bars\n8 Over the Water Bungalows\n5 pools, 3 whirlpools, 1 SCUBA pool\nFitness Center and Red Lane Spa\n",
     "IdealFor": "Beach Lovers\n",
     "IdealFor2": "Golf Lovers",
     "IdealFor3": "Food and Drink Lovers",
-    "Tags": "Adults Only \nMore Tranquil\nMore Expansive (Number of Suites: 311 Rooms)\nScuba – Need info if “from resort” or “off resort” (from resort)\nLong stretch of beach\nGolf on the resort\nOver the Water Villas \nRondoval Villa\nSwim Up Suite \nTennis\nBritish Pub, Jerk Shack, Sushi, Teppanyaki \nDistance to Airport: More than an hour \n",
+    "Tags": "adults-only, More-Tranquil, More-Expansive, Scuba, Long-stretch-of-beach, golf, Over-the-Water-Villas, Rondoval Villa, Swim-Up-Suite, Tennis, British-Pub, Jerk-Shack, Sushi, Teppanyaki, Distance-to-Airport,",
     "Images": "images/Sandals Grande St. Lucian/1 - Carousel_ResortHero_Slider/DJI_0091.jpg",
     "Beaches": "images/Sandals Grande St. Lucian/4 - Beaches/SGL Lifestyle Drone.jpg",
     "Pool": "images/Sandals Grande St. Lucian/3 - Pools/DJI_0874.jpg",
@@ -625,7 +621,7 @@
     "IslandTours": ""
   },
   {
-    "ResortTitle": "Beaches Turks & Caicos",
+    "ResortTitle": "Beaches Turks and Caicos",
     "Island": "Turks & Caicos",
     "ResortDescription": "Situated on world-renowned Grace Bay\n Five vacations in one – with five different villages\nADI-Certified SCUBA diving and equipment at one of the best-ranked dive sites in the world\n10 pools, 4 whirlpools & 1 scuba diving pool\nHome to Pirate’s Island, featuring a surfing park, 8 waterslides, and a kids-only swim-up bar\nProfessional instruction for water sports including Hobie Cats, paddleboards, kayaks\n24 dining options and 14 bars\nState-of-the-art fitness center\nSesame Street® themed activities with daily character appearance\nThe Caribbean’s first certified Autism Centers\n",
     "IdealFor": "Family Fun",
