--- a/index.html
+++ b/index.html
@@ -514,8 +514,8 @@
     "ResortDescription": "Saint Lucia’s most glamourous resort\nHalf-mile, crescent-shaped beach\nSet against exotic coral bluffs, lush hillsides and rolling fairways\nStay at 1, play at 3 – full and easy access to 2 other Sandals resorts\nSunset Bluff Millionaire Butler Villas with private pool sanctuary \nSandals Regency La Toc Golf course with 9 holes located directly on the resort \n9 restaurants and 8 bars\n3 pools and 4 whirlpools\nPADI-Certified SCUBA diving and equipment\nFitness Center and Red Lane Spa ",
     "IdealFor": "Beach Lovers\n",
     "IdealFor2": "Nature Lovers",
-    "IdealFor3": ". Golf Lovers",
-    "Tags": "",
+    "IdealFor3": "Golf Lovers",
+    "Tags": "adults-only, golf, more-tranquil, more-expansive, scuba-on-property, swim-up-suite, rondoval-villa, steakhouse, sushi,",
     "Images": "images/Sandals Regency La Toc/1 - Carousel_ResortHero_Slider/SLU Drone 3.jpg",
     "Beaches": "images/Sandals Regency La Toc/4 - Beaches/SLU Drone 4-2.jpg",
     "Pool": "images/Sandals Regency La Toc/3 - Pools/SLU Drone 1.jpg",
@@ -531,7 +531,7 @@
     "IdealFor": "Beach Lovers\n",
     "IdealFor2": "Golf Lovers",
     "IdealFor3": "Food and Drink Lovers",
-    "Tags": "adults-only, More-Tranquil, More-Expansive, Scuba, Long-stretch-of-beach, golf, Over-the-Water-Villas, Rondoval Villa, Swim-Up-Suite, Tennis, British-Pub, Jerk-Shack, Sushi, Teppanyaki, Distance-to-Airport,",
+    "Tags": "adults-only, more-tranquil, more-expansive, scuba, long-stretch-of-beach, golf, over-the-water-villas, rondoval villa, swim-up-suite, tennis, british-pub, jerk-shack, sushi, teppanyaki, distance-to-airport",
     "Images": "images/Sandals Grande St. Lucian/1 - Carousel_ResortHero_Slider/DJI_0091.jpg",
     "Beaches": "images/Sandals Grande St. Lucian/4 - Beaches/SGL Lifestyle Drone.jpg",
     "Pool": "images/Sandals Grande St. Lucian/3 - Pools/DJI_0874.jpg",
@@ -547,7 +547,7 @@
     "IdealFor": "Food and Drink Lovers",
     "IdealFor2": "Pool Lovers",
     "IdealFor3": "Sport Lovers",
-    "Tags": "Adults Only, More Tranquil, More Expansive (Number of Suites: 351 Rooms), scuba-on-property, Swim Up Suite, Rondoval Villa , Steakhouse, Sushi , Distance to Airport: Less than 45 minutes \n",
+    "Tags": "adults-only, more-tranquil, more-expansive, scuba-on-property, swim-up-suite, rondoval-villa, steakhouse, sushi,",
     "Images": "images/Sandals Royal Curacao/1 - Carousel_ResortHero_Slider/croissantsandcaviar_sandalsroyalcuracao_resort-8.jpg",
     "Beaches": "images/Sandals Royal Curacao/4 - Beaches/untitled-194(B).jpg",
     "Pool": "images/Sandals Royal Curacao/3 - Pools/untitled-185.jpg",
@@ -563,7 +563,7 @@
     "IdealFor": "Nature Lovers",
     "IdealFor2": "Pool Lovers",
     "IdealFor3": "Watersports Lovers",
-    "Tags": "Adults Only, More Tranquil, More Intimate, Long stretch of beach, scuba-on-property,, Tennis, Rondoval Villa, Teppanyaki, British Pub, Sushi, Distance to Airport: Less than 45 minutes ",
+    "Tags": "adults-only, more-tranquil, more-intimate, long-stretch-of-beach, scuba-on-property,, tennis, rondoval-villa, teppanyaki, british-pub, sushi",
     "Images": "images/Sandals Grande Antigua/1 - Carousel_ResortHero_Slider/SANDALS_07_2019_BEACH_PADDLEBOARD_COUPLE_6830-370-123.jpg",
     "Beaches": "images/Sandals Grande Antigua/4 - Beaches",
     "Pool": "images/Sandals Grande Antigua/3 - Pools/7H6A7577.jpg",
