--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <div class="filters-title">
         <div class="filters-title-wrapper">
           <h1 class="heading-2">Build Your IDEAL VACATION</h1>
-          <h4 class="heading-3">select up to 3 options</h4>
+          <h4 class="heading-3">Choose a family category + 1 other tag</h4>
           <div class="tag-breadcrumb">
 
           </div>
@@ -622,7 +622,7 @@
   },
   {
     "ResortTitle": "Beaches Turks and Caicos",
-    "Island": "Turks & Caicos",
+    "Island": "Turks and Caicos",
     "ResortDescription": "Situated on world-renowned Grace Bay\n Five vacations in one – with five different villages\nADI-Certified SCUBA diving and equipment at one of the best-ranked dive sites in the world\n10 pools, 4 whirlpools & 1 scuba diving pool\nHome to Pirate’s Island, featuring a surfing park, 8 waterslides, and a kids-only swim-up bar\nProfessional instruction for water sports including Hobie Cats, paddleboards, kayaks\n24 dining options and 14 bars\nState-of-the-art fitness center\nSesame Street® themed activities with daily character appearance\nThe Caribbean’s first certified Autism Centers\n",
     "IdealFor": "Family Fun",
     "IdealFor2": "Watersports",
